# krr_system

./: .gitignore  KRR_test.ipynb  README.md  app.py  pyproject.toml
krr_system/: __init__.py  domain.py  examples.py  scenario.py  structure.py  utils.py
test/: test_AZ.py  test_BE.py  test_DP.py  test_KW.py  test_MK.py  test_PS.py  test_SM.py
tests/: test_AZ.py  test_MK.py  test_PS.py  test_SM.py  test_formula.py
variables/: action_occurrences.txt  actions.txt  cause_formula.txt  fluents.txt  initial_states.txt  observation_formula.txt  observations.txt  statements.txt
