[tool.poetry]
name = "krr-system"
version = "0.1.0"
description = ""
authors = ["beljasiak"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
streamlit = "1.14.0"
sympy = "1.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
